Fixed visibility issues on the opening screen

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -545,11 +545,12 @@ body.mobile-nav-active #mobile-nav-toggle {
 --------------------------------------------------------------*/
 #intro {
   width: 100%;
-  height: 100vh;
+  height: fit-content;
   background: url(../img/intro-bg.jpeg) bottom center;
   background-size: cover;
   overflow: hidden;
   position: relative;
+  padding: 10px;
 }
 
 @media (min-width: 1024px) {
